[tool.poetry]
name = "fast-api-company"
version = "0.1.0"
description = ""
authors = ["Borovskoy Aleksey <gladiatormahotina@yandex.ru>"]
readme = "README.md"
packages = [{include = "fast_api_company"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
